--- a/index.html
+++ b/index.html
@@ -4,18 +4,62 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="css/master.css">
     <title>boolzap</title>
   </head>
   <body>
+    <main class="container">
+      <section class="section-left">
+
+        <div class="headbar-left">
+          <div class="headbar-photo-left">
+            <i class="fas fa-user-tie"></i>
+          </div>
+
+          <div class="headbar-icons-right">
+            <i class="fas fa-circle-notch"></i>
+            <i class="fas fa-comment-alt"></i>
+            <i class="fas fa-ellipsis-v"></i>
+
+          </div>
+
+        </div>
+
+        <div class="cerca">
+          <input type="text" name="search" value="">
+
+        </div>
+
+        <div class="friends">
 
 
+        </div>
+
+      </section>
 
 
+      <section class="section-right">
+        <div class="headbar-right">
+          <div class="headbar-photo-left">
 
+          </div>
 
+          <div class="headbar-icons-right">
 
+          </div>
 
+        </div>
+
+        <div class="chat-room">
+
+        </div>
+        <div class="bot-bar">
+
+        </div>
+
+      </section>
+    </main>
 
 
 
