--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
           </div>
 
           <div class="headbar-icons-right">
-            <i class="fas fa-circle-notch"></i>
-            <i class="fas fa-comment-alt"></i>
-            <i class="fas fa-ellipsis-v"></i>
-
+            <a href="#"><i class="fas fa-circle-notch"></i></a>
+            <a href="#"><i class="fas fa-comment-alt"></i></a>
+            <a href="#"><i class="fas fa-ellipsis-v"></i></a>
           </div>
 
         </div>
 
         <div class="cerca">
-          <input type="text" name="search" value="">
-
+          <i class="fas fa-search"></i>
+          <input type="text" name="search" value="" placeholder="cerca o inizia una nuova chat">
         </div>
 
         <div class="friends">
