left general build

--- a/index.html
+++ b/index.html
@@ -31,8 +31,84 @@
         </div>
 
         <div class="friends">
-
-
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
+        </div>
+        <div class="friends">
+          <i class="fas fa-user-tie"></i>
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
+          </div>
+          <span>17.53</span>
         </div>
 
       </section>
