--- a/index.html
+++ b/index.html
@@ -117,11 +117,18 @@
       <section class="section-right">
         <div class="headbar-right">
           <div class="headbar-photo-left">
+            <i class="fas fa-user-tie"></i>
+          </div>
 
+          <div class="name-details">
+            <h4>Name</h4>
+            <h5>Subtitle</h5>
           </div>
 
           <div class="headbar-icons-right">
-
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#"><i class="fas fa-paperclip"></i></a>
+            <a href="#"><i class="fas fa-ellipsis-v"></i></a>
           </div>
 
         </div>
@@ -129,6 +136,7 @@
         <div class="chat-room">
 
         </div>
+        
         <div class="bot-bar">
 
         </div>
