right general build

--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
         <div class="headbar-right">
           <div class="headbar-photo-left">
             <i class="fas fa-user-tie"></i>
+            <div class="name-details">
+              <h4>Name</h4>
+              <h5>Subtitle</h5>
+            </div>
           </div>
 
-          <div class="name-details">
-            <h4>Name</h4>
-            <h5>Subtitle</h5>
-          </div>
+
 
           <div class="headbar-icons-right">
             <a href="#"><i class="fas fa-search"></i></a>
@@ -136,9 +137,11 @@
         <div class="chat-room">
 
         </div>
-        
-        <div class="bot-bar">
 
+        <div class="bot-bar">
+          <i class="far fa-smile"></i>
+          <input type="text" name="chat-door" value="" placeholder="scrivi un messaggio">
+          <i class="fas fa-microphone"></i>
         </div>
 
       </section>
