--- a/index.html
+++ b/index.html
@@ -135,12 +135,19 @@
         </div>
 
         <div class="chat-room">
+          <div class="chat-user">
+
+          </div>
+          <!-- <div class="chat-friend">
+
+          </div> -->
 
         </div>
 
         <div class="bot-bar">
           <i class="far fa-smile"></i>
           <input type="text" name="chat-door" value="" placeholder="scrivi un messaggio">
+          <i class="fas fa-paper-plane"></i>
           <i class="fas fa-microphone"></i>
         </div>
 
