--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="chat-room">
-          <div class="chat-user">
+          <div id="chat-user">
 
           </div>
           <!-- <div class="chat-friend">
@@ -146,8 +146,8 @@
 
         <div class="bot-bar">
           <i class="far fa-smile"></i>
-          <input type="text" name="chat-door" value="" placeholder="scrivi un messaggio">
-          <i class="fas fa-paper-plane"></i>
+          <input id="scrivi-un-messaggio"type="text" name="chat-door" value="" placeholder="scrivi un messaggio">
+          <i id="submit" class="fas fa-paper-plane"></i>
           <i class="fas fa-microphone"></i>
         </div>
 
