clear da aggiungere

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
           <div id="chat-user">
 
           </div>
-          <!-- <div class="chat-friend">
+          <div id="chat-friend">
 
-          </div> -->
+          </div>
 
         </div>
 
