--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
 
         <div class="chat-room">
           <div id="chat-user">
+            <span id="text">ciao!</span>
+            <span id="hour">10.21</span>
+            <i class="fas fa-chevron-down">
+              <div class="chatmenu">
+                <span id="impostazioni">impostazioni</span>
+                <span id="delete">Elimina messaggio</span>
+              </div>
+            </i>
+
 
           </div>
           <div id="chat-friend">
