--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 
         <div class="chat-room">
           <div id="chat-user">
-            <span id="text">ciao!</span>
+            <div id="text" class="">ciao!</div>
             <span id="hour">10.21</span>
             <i class="fas fa-chevron-down">
-              <div class="chatmenu">
-                <span id="impostazioni">impostazioni</span>
-                <span id="delete">Elimina messaggio</span>
-              </div>
+              <ul class="chatmenu">
+                <li id="impostazioni">Impostazioni</li>
+                <li id="delete">Elimina messaggio</li>
+              </ul>
             </i>
 
 
