--- a/index.html
+++ b/index.html
@@ -138,12 +138,11 @@
           <div id="chat-user">
             <div id="text" class="">ciao!</div>
             <span id="hour">10.21</span>
-            <i class="fas fa-chevron-down">
-              <ul class="chatmenu">
-                <li id="impostazioni">Impostazioni</li>
-                <li id="delete">Elimina messaggio</li>
-              </ul>
-            </i>
+            <i id="freccia" class="fas fa-chevron-down"></i>
+            <ul class="chatmenu">
+              <li id="impostazioni">Impostazioni</li>
+              <li id="delete">Elimina messaggio</li>
+            </ul>
 
 
           </div>
