--- a/index.html
+++ b/index.html
@@ -135,20 +135,24 @@
         </div>
 
         <div class="chat-room">
-          <div id="chat-user">
-            <div id="text" class="">ciao!</div>
-            <span id="hour">10.21</span>
-            <i id="freccia" class="fas fa-chevron-down"></i>
-            <ul class="chatmenu">
-              <li id="impostazioni">Impostazioni</li>
-              <li id="delete">Elimina messaggio</li>
-            </ul>
+          <div class="container">
+            <div id="chat-user">
+              <div id="text" class="">ciao!</div>
+              <span id="hour">10.21</span>
+              <i id="freccia" class="fas fa-chevron-down"></i>
+              <ul class="chatmenu">
+                <li id="impostazioni">Impostazioni</li>
+                <li id="delete">Elimina messaggio</li>
+              </ul>
+            </div>
+          </div>
+          <div class="container">
+            <div id="chat-friend">
 
+            </div>
 
           </div>
-          <div id="chat-friend">
 
-          </div>
 
         </div>
 
