--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
           </div>
           <div class="container">
             <div id="chat-friend">
+              <div id="text" class="">come stai?</div>
+              <span id="hour">10.21</span>
+              <i id="freccia" class="fas fa-chevron-down"></i>
+              <ul class="chatmenu">
+                <li id="impostazioni">Impostazioni</li>
+                <li id="delete">Elimina messaggio</li>
+              </ul>
 
             </div>
 
